--- a/WD-MIDTERM-main/index.html
+++ b/WD-MIDTERM-main/index.html
@@ -26,9 +26,9 @@
             <h2>CEO OF DIGITAL M PRODUCTION</h2>
             <p>I am Emmanuel R. Mojeca aka Em-m. Your cenematographer,<br>filmmaker, photographer, story teller, video editor, photo editor <br> and also Your future wedding filmmaker. Also a Multideia Artist and Director. <br> <br> <br> <br> For weeding photoshoot, wedding film, street photography and other videography <br> and photography shoots, just direct message on my official page. </p>
             <div class="carousel">
-                <img src="image1.jpg" alt="Image 1">
-                <img src="image2.jpg" alt="Image 2">
-                <img src="image3.jpg" alt="Image 3">
+                <img src="./assets/img/image1.jpg" alt="Image 1">
+                <img src="./assets/img/image2.jpg" alt="Image 2">
+                <img src="./assets/img/image3.jpg" alt="Image 3">
             </div>
         </div>
     </section>
@@ -43,9 +43,9 @@
                 
             </p>
             <div class="carousel">
-                <img src="image4.jpg" alt="Image 4">
-                <img src="image5.png" alt="Image 5">
-                <img src="image6.png" alt="Image 6">
+                <img src="./assets/img/image4.jpg" alt="Image 4">
+                <img src="./assets/img/image5.png" alt="Image 5">
+                <img src="./assets/img/image6.png" alt="Image 6">
             </div>
         </div>
     </section>
@@ -55,9 +55,9 @@
             <h2>Projects</h2><br><br><br><br><br>
             <p>This is my first 3 clients and also <br> my Top 3 projects.</p> <br><br><br><br><br><br>
             <div class="carousel">
-                <img src="image7.jpg" alt="Image 7">
-                <img src="image8.jpg" alt="Image 8">
-                <img src="image9.jpg" alt="Image 9">
+                <img src="./assets/img/image7.jpg" alt="Image 7">
+                <img src="./assets/img/image8.jpg" alt="Image 8">
+                <img src="./assets/img/image9.jpg" alt="Image 9">
             </div>
         </div>
     </section>
@@ -67,9 +67,9 @@
             <h2>My Plan</h2>
             <p>DGM have a simple plan for his life and he need to get his dream. <br> First he want to be a succesful fimmaker. Next is to accomplish his collage jurney. <br> Then last is he want to help his parents and bring back then care that they <br> give to Director Emmanuel R. Mojeca</p>
             <div class="carousel">
-                <img src="image10.jpeg" alt="Image 10">
-                <img src="image11.jpg" alt="Image 11">
-                <img src="image12.jpg" alt="Image 12">
+                <img src="./assets/img/image10.jpeg" alt="Image 10">
+                <img src="./assets/img/image11.jpg" alt="Image 11">
+                <img src="./assets/img/image12.jpg" alt="Image 12">
             </div>
         </div>
     </section>
